<?xml version="1.0"?>
<package>
  <name>kafka_ros</name>
  <version>1.6.0</version>
  <description>
  ROS package for converting between ROS msg and kafka msg.
  </description>
  <maintainer email="example@example.com">Xsens</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>  
  <build_depend>nmea_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>can_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>
  
  <export>
  </export>
</package>


